<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <!--用户名-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_user_id"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@null"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:hint="@string/login_hint_1"
            android:textSize="16dp"
            android:inputType="number"/>

        <Button
            android:id="@+id/btn_delete_input"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@mipmap/delete_input_1"/>
    </LinearLayout>
    <!--line1-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1.0dp"
        android:background="@drawable/style_line1"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

    <!--密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_user_password"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@null"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:hint="@string/login_hint_2"
            android:textSize="16dp"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/btn_show_password"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@mipmap/eye_close"/>
    </LinearLayout>
    <!--line1-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1.0dp"
        android:background="@drawable/style_line1"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

    <!--登录按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorPrimary"
            android:text="@string/login_button"/>
    </LinearLayout>

    <!--忘记密码&注册-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">
        <Button
            android:id="@+id/btn_forgetPassword"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/login_forget_pass"
            android:textColor="@color/colorPrimary"
            android:textAlignment="viewStart"
            android:textSize="16dp"/>
        <Button
            android:id="@+id/btn_login_register"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/login_register"
            android:textColor="@color/colorPrimary"
            android:textAlignment="viewEnd"
            android:textSize="16dp"/>
    </LinearLayout>

</LinearLayout>