<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <!--用户名-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_rgt_id"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@null"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:hint="@string/rgt_hint_1"
            android:textSize="16dp"
            android:inputType="number"/>

        <Button
            android:id="@+id/btn_rgt_delete_input"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@mipmap/delete_input_1"/>
    </LinearLayout>
    <!--line1-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1.0dp"
        android:background="@drawable/style_line1"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

    <!--提示文字：该用户名不可用-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">
        <TextView
            android:id="@+id/tv_username_unavailable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rgt_username_unavailable"
            android:textSize="16dp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

    <!--密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_rgt_password_1"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@null"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:hint="@string/rgt_hint_2"
            android:textSize="16dp"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/btn_show_password_1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@mipmap/eye_close"/>
    </LinearLayout>
    <!--line1-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1.0dp"
        android:background="@drawable/style_line1"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

    <!--密码确认-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_rgt_password_2"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@null"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:hint="@string/rgt_hint_3"
            android:textSize="16dp"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/btn_show_password_2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@mipmap/eye_close"/>
    </LinearLayout>
    <!--line1-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1.0dp"
        android:background="@drawable/style_line1"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

    <!--注册按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorPrimary"
            android:text="@string/rgt_button"/>
    </LinearLayout>

</LinearLayout>